update user endpoints
