# docs/swaggerDocsBuild.json
@@ -2081,48 +2081,23 @@
         ],
         "requestBody": {
           "content": {
-            "application/json": {
+            "application/x-www-form-urlencoded": {
               "schema": {
                 "type": "object",
                 "required": [
-                  "username",
-                  "password"
+                  "username"
                 ],
                 "properties": {
                   "username": {
                     "type": "string"
                   },
-                  "password": {
-                    "type": "string",
-                    "format": "password"
+                  "disabled": {
+                    "type": "boolean",
+                    "description": "not accessable accounts"
                   },
-                  "userInfos": {
-                    "type": "array",
-                    "items": {
-                      "type": "object",
-                      "allOf": [
-                        {
-                          "$ref": "#/components/schemas/AutoGeneratedData"
-                        },
-                        {
-                          "$ref": "#/components/schemas/UsersInfo"
-                        }
-                      ]
-                    }
-                  },
-                  "contactInfos": {
-                    "type": "array",
-                    "items": {
-                      "type": "object",
-                      "allOf": [
-                        {
-                          "$ref": "#/components/schemas/AutoGeneratedData"
-                        },
-                        {
-                          "$ref": "#/components/schemas/UsersContactInfo"
-                        }
-                      ]
-                    }
+                  "verified": {
+                    "type": "boolean",
+                    "description": "not verified accounts are similar to pending account creation request"
                   }
                 }
               }
@@ -2217,6 +2192,28 @@
             }
           }
         ],
+        "requestBody": {
+          "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "type": "string"
+                  },
+                  "disabled": {
+                    "type": "boolean",
+                    "description": "not accessable accounts"
+                  },
+                  "verified": {
+                    "type": "boolean",
+                    "description": "not verified accounts are similar to pending account creation request"
+                  }
+                }
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "Users fetched successfully",
